experiment/k8s-100-users-2026-10-05/results/network-policy.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"no-real-model-api","namespace":"s2t-stress-20261005"},"spec":{"egress":[{"to":[{"podSelector":{}}]},{"ports":[{"port":53,"protocol":"UDP"},{"port":53,"protocol":"TCP"}],"to":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"kube-system"}}}]}],"podSelector":{},"policyTypes":["Egress"]}}
    creationTimestamp: "2026-10-05T14:37:36Z"
    generation: 1
    name: no-real-model-api
    namespace: s2t-stress-20261005
    resourceVersion: "598"
    uid: 8368b86d-ca73-40fb-8519-bf8eec0613cc
  spec:
    egress:
    - to:
      - podSelector: {}
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
      to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
    podSelector: {}
    policyTypes:
    - Egress
kind: List
metadata:
  resourceVersion: ""
